# hermes-pi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  conftest.py  install.sh  mise.toml  pyproject.toml
.github/workflows/: ci.yml
analysis/: baseline-manifest.sha256  run-log.md
assets/: pi-cli-help-snapshot.txt  pi-event-lifecycle.txt  pi-philosophy-transcript.txt
references/: pi-extension-events.md  pi-fast-streaming-recipes.md  pi-non-interactive-cookbook.md  pi-philosophy.md  pi-vs-claude-code.md  pi-worktree-isolation.md
scripts/: verify-sync.sh
tests/: MANIFEST.md  README.md  conftest.py  test_ci_workflow.py  test_install_sh_shape.py  test_makefile_targets.py  test_mise_tasks.py  test_no_loader_breakage.py  test_r01_frontmatter.py  test_r02_required_sections.py  test_r03_non_interactive_mandate.py  test_r04_fast_streaming_recipe.py  test_r05_extension_events.py  test_r06_source_traceability.py  test_r07_philosophy_quotes.py  test_r08_hermes_integration.py  test_r09_rpc_framing.py  test_r10_primitive_coverage.py  test_r11_agent_session_event.py  test_r12_smoke.py  test_r13_skill_register.py  test_r14_forbidden_tokens.py  test_r15_mcp_anti_pattern.py  test_r16_pi_vs_claude_code.py  test_r17_worktree_isolation.py  test_readme_mise_only.py  test_remote_published.py  test_repo_layout.py  test_repo_sync_invariants.py  test_skill_content_preserved.py
